# ProtosExample

./: CMakeLists.txt  machine.proto  sensor.proto
